# uy_historical_chat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/src/artigas_mvp_backend/: __init__.py  config.py  corpus.py  corpus_models.py  dev_corpus.py  evaluate.py  evaluation_baseline.py  evaluation_checks.py  evaluation_models.py  evaluation_review.py  index_corpus.py  ingest.py  main.py  models.py
backend/src/artigas_mvp_backend/api/: chat.py  corpus.py
backend/src/artigas_mvp_backend/prompts/: __init__.py  artigas.txt  historical_character.txt
backend/src/artigas_mvp_backend/services/: chat.py  citations.py  corpus.py  education.py  embeddings.py  evidence.py  gemini.py  usage.py
backend/tests/: corpus_fixtures.py  test_chat.py  test_chat_provider.py  test_chat_service.py  test_citations.py  test_config.py  test_corpus_models.py  test_corpus_prepare.py  test_corpus_route.py  test_corpus_service.py  test_dev_corpus.py  test_education.py  test_embeddings.py  test_ensure_sh.py  test_evaluate.py  test_evaluation_baseline.py  test_evaluation_checks.py  test_evaluation_review.py  test_evidence.py  test_gemini.py  test_health.py  test_index_corpus.py  test_ingest.py  test_marker_citations.py  test_models.py  test_prompt.py  test_real_corpus.py  test_repository_docs.py  test_usage.py
data/: artigas-pages.json  learning-map.yaml  source-manifest.yaml
docs/: character-authoring.md  corpus-maintenance.md  project-memory.yaml
evals/: artigas-cases.yaml  rubric.yaml
evals/fixtures/: provider-error.json  unmapped-citation.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: check.ps1  check.sh  ensure.ps1  ensure.sh  fix.ps1  fix.sh  run.sh
(+19 files in other folders)
