[project]
name = "artigas-mvp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adrian", email = "44225495+r3k4ce@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai==2.11.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]

[project.scripts]
artigas-mvp-backend = "artigas_mvp_backend:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright[nodejs]>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "reportlab>=5.0.0",
    "ruff>=0.15.21",
]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["src", "tests"]
exclude = [
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "**/__pycache__",
    "**/*.egg-info"
]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.uv]
required-version = "==0.11.26"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov --cov-report=term-missing:skip-covered --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [".venv/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
